# anderdzi

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  MILESTONES.md  README.md  package-lock.json  package.json  tsconfig.json
app/: README.md  eslint.config.js  index.html  make_green_favicon.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/.lovable/: plan.md
app/src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
app/src/components/anderdzi/: Footer.tsx  (+5 more)
app/src/hooks/: useAnchorProgram.ts  useChain.ts  useSolBalance.ts  useWalletSync.ts
app/src/idl/: anderdzi.json  anderdzi.ts
app/src/lib/: accounts.ts  constants.ts  instructions.ts  mock.ts  utils.ts
app/src/providers/: WalletProvider.tsx
app/src/routes/: __root.tsx  create.tsx  dashboard.tsx  index.tsx
app/src/store/: useMockStore.ts  useStore.ts  useVaultStore.ts
bot/: .env.example  Cargo.toml
bot/src/: api.rs  common.rs  db.rs  executor.rs  main.rs  notifier.rs  watcher.rs
programs/anderdzi/: Cargo.toml
programs/anderdzi/src/: errors.rs  lib.rs  marinade.rs  state.rs
programs/anderdzi/src/instructions/: admin_rotate_watcher.rs  cancel_trigger.rs  close_vault.rs  create_vault.rs  deposit.rs  disable_staking.rs  distribute.rs  enable_staking.rs  harvest_yield.rs  initialize_treasury.rs  mod.rs  opt_in_watcher.rs  opt_out_watcher.rs  ping.rs  set_beneficiaries.rs  set_default_watcher.rs  stake_deposit.rs  trigger.rs  unstake_withdraw.rs  update_beneficiaries.rs  update_watcher.rs  withdraw.rs  withdraw_fees.rs  witness_activity.rs
scripts/: init-treasury.ts
tests/: anderdzi.ts  beneficiaries.ts  distribute.ts  e2e.ts  funds.ts  heartbeat.ts  helpers.ts  lifecycle.ts  staking.ts  test-helpers.ts  treasury.ts  trigger.ts  vault.ts  vault_lifecycle.ts  watcher.ts
(+1 files in other folders)
