[package]
name = "anderdzi-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anderdzi-bot"
path = "src/main.rs"

[dependencies]
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"
borsh = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
sha2 = "0.10"
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2", features = ["std"] }
bs58 = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
spl-token = "7"
spl-associated-token-account = "6"
